--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .whole_app {
   display: flex;
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal,
+    "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", "sans serif";
   flex-direction: column;
   text-align: center;
   justify-content: space-between;
@@ -8,10 +10,16 @@
   width: 100vw;
 }
 
+#first_time {
+  flex-direction: row;
+}
+
 .header {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold",Charcoal,"Helvetica Inserat","Bitstream Vera Sans Bold","Arial Black","sans serif";
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal,
+    "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", "sans serif";
   font-size: 25px;
   height: auto;
   width: 100vw;
@@ -20,17 +28,23 @@
 
 .login_box {
   display: flex;
+  align-self: center;
+  margin-top: 20vh;
   flex-wrap: wrap;
   flex-direction: column;
   font-size: 50px;
-  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold",Charcoal,"Helvetica Inserat","Bitstream Vera Sans Bold","Arial Black","sans serif";
+  font-family: Impact, Haettenschweiler, "Franklin Gothic Bold", Charcoal,
+    "Helvetica Inserat", "Bitstream Vera Sans Bold", "Arial Black", "sans serif";
   align-items: center;
   text-align: center;
   justify-content: space-evenly;
-  height: 50%;
-  padding: 10px;
+  height: 60%;
+  padding: 20px;
   margin-bottom: 20vh;
-  width: 25vw;
+  width: 400px;
+  box-shadow: 10px 15px 5px grey;
+  border: 1px solid grey;
+  border-radius: 15px;
 }
 
 .login_text {
@@ -41,21 +55,58 @@
   border: none;
 }
 
+.create_text {
+  width: 45%;
+  height: 25px;
+  font-size: 15px;
+  text-align: left;
+  border: none;
+
+}
+
 .login_text:focus {
   border-bottom: 2px solid black;
   outline: none;
 }
 
-.login_button_wrap{
+.login_button_wrap {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  flex-wrap: wrap;
   width: 100%;
-  height: 25px;
+  margin-top: 15px;
   align-content: center;
+  justify-content: space-around;
 }
-.login_button{
-font-size: 13px;
-border-radius: 33px;
-outline: none;
+#login_button {
+  margin-top: 15px;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.firstTime_create {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: left;
+  height: 90%;
+  width: 70vw;
+  margin-left: 10px;
+  text-align: left;
+  padding: 16px;
+  border: 2px solid black;
+  border-radius: 15px;
+}
+
+.firstTime_info {
+  height: 90%;
+  width: 30vw;
+  margin: 10px;
+  text-align: left;
+  padding: 10px;
+  border: 2px solid black;
+  border-radius: 15px;
 }
