--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,12 @@
 .whole_app {
   display: flex;
-  font-family: 'Alegreya Sans', sans-serif;
+  font-family: "Alegreya Sans", sans-serif;
   flex-direction: column;
   text-align: center;
   justify-content: space-between;
   align-items: center;
   height: 100vh;
   width: 100vw;
-}
-
-#first_time {
-  flex-direction: row;
 }
 
 .header {
@@ -50,9 +46,6 @@
   border: none;
 }
 
-
-
-
 .login_text:focus {
   border-bottom: 2px solid black;
   outline: none;
@@ -76,6 +69,18 @@ a {
   color: black;
 }
 
+.create_text {
+  width: 45%;
+  height: 25px;
+  font-size: 15px;
+  border: none;
+  text-align: left;
+}
+
+#first_time {
+  flex-direction: row;
+}
+
 .firstTime_create {
   display: flex;
   flex-direction: column;
@@ -89,14 +94,6 @@ a {
   border-radius: 15px;
 }
 
-.create_text {
-  width: 45%;
-  height: 25px;
-  font-size: 15px;
-  border: none;
-  text-align: left;
-}
-
 #firstTime_activities_container {
   width: auto;
   display: flex;
@@ -106,6 +103,9 @@ a {
 }
 
 .firstTime_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   height: 90%;
   width: 30vw;
   margin: 10px;
@@ -113,4 +113,39 @@ a {
   padding: 10px;
   border: 2px solid black;
   border-radius: 15px;
+}
+
+.firstTime_info_containers {
+  display: flex;
+  justify-content: space-between;
+}
+
+#firstTime_info_headers {
+  font-size: 20px;
+  color: black;
+  border: bottom;
+  border-style: dotted;
+}
+
+#firstTime_info_content {
+  font-size: 16px;
+  color: grey;
+}
+
+#home_container {
+  display: flex;
+  font-family: "Alegreya Sans", sans-serif;
+  height: 100vh;
+  width: 100vw;
+}
+
+.header_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  color:white;
+  background-color: #334652;
+  height: 50px;
+  width: 100vw;
 }
