--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .whole_app {
+  position: fixed;
   display: flex;
+  z-index: 1;
   font-family: "Alegreya Sans", sans-serif;
   flex-direction: column;
   text-align: center;
@@ -7,6 +9,18 @@
   align-items: center;
   height: 100vh;
   width: 100vw;
+}
+
+.background_image {
+  background-image: url("https://images6.alphacoders.com/319/thumb-1920-319878.jpg");
+  filter: blur(6px);
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  right: 0;
+  display: block;
+  height: 100%;
+  width: 100%;
 }
 
 .header {
@@ -21,6 +35,9 @@
 
 .login_box {
   display: flex;
+  position: fixed;
+  z-index: 9999;
+  filter: none;
   align-self: center;
   margin-top: 20vh;
   flex-wrap: wrap;
@@ -34,7 +51,7 @@
   margin-bottom: 20vh;
   width: 400px;
   box-shadow: 10px 15px 5px grey;
-  border: 1px solid grey;
+  border: 4px solid grey;
   border-radius: 15px;
 }
 
@@ -73,21 +90,26 @@ a {
   width: 45%;
   height: 25px;
   font-size: 15px;
+  color: black;
   border: none;
   text-align: left;
 }
 
 #first_time {
   flex-direction: row;
+  background-image: url("http://getwallpapers.com/wallpaper/full/9/5/b/484493.jpg");
+  background-size: auto;
 }
 
 .firstTime_create {
   display: flex;
+  background: white;
+  opacity: 0.8;
   flex-direction: column;
   justify-content: space-around;
   align-items: left;
-  height: 90%;
-  width: 70vw;
+  height: 95%;
+  width: 50%;
   margin-left: 10px;
   padding: 16px;
   border: 2px solid black;
@@ -105,9 +127,11 @@ a {
 .firstTime_info {
   display: flex;
   flex-direction: column;
+  background: white;
+  opacity: 0.8;
   justify-content: space-between;
-  height: 90%;
-  width: 30vw;
+  height: 95%;
+  width: 50%;
   margin: 10px;
   text-align: left;
   padding: 10px;
@@ -134,6 +158,7 @@ a {
 
 #home_container {
   display: flex;
+  flex-direction: column;
   font-family: "Alegreya Sans", sans-serif;
   height: 100vh;
   width: 100vw;
@@ -144,8 +169,191 @@ a {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  color:white;
+  color: white;
   background-color: #334652;
-  height: 50px;
+  height: 55px;
   width: 100vw;
+}
+
+.home_info_container {
+  display: flex;
+  flex-direction: row;
+  width: 100vw;
+  height: 100%;
+}
+
+.home_info_left_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  background-color: #76828c;
+  height: 100%;
+  width: auto;
+  padding: 15px;
+}
+
+.home_info_left_item {
+  text-align: left;
+  width: auto;
+  font-size: 20px;
+  height: auto;
+}
+
+.home_info_left_itemHeader {
+  text-align: left;
+  color: white;
+  text-decoration-line: underline;
+  width: auto;
+  font-size: 20px;
+  height: auto;
+}
+
+#headerFont {
+  font-size: 30px;
+}
+
+.home_info_right_containerMain {
+  display: flex;
+  flex-direction: row;
+  background-color: #457399;
+  height: 100%;
+  width: 100%;
+}
+
+.home_info_right_containerRight {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100%;
+  width: 60%;
+}
+
+.home_info_right_containerRight_cally {
+  height: 60%;
+  width: 90%;
+  border: 4px solid;
+}
+
+.home_info_right_containerRight_events {
+  height: 20%;
+  width: 90%;
+  border: 4px solid;
+}
+
+.home_info_right_containerLeft {
+  display: flex;
+  justify-content: space-evenly;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+  width: 75vw;
+}
+
+.home_info_right_containerLeft_sub1 {
+  display: flex;
+  flex-direction: row;
+  background-color: #76828c;
+  height: 250px;
+  width: 90%;
+  border: 3px solid black;
+}
+
+.home_info_right_containerLeft_API_content {
+  display: flex;
+  flex-direction: row;
+  height: 50%;
+  width: 90%;
+  border: 4px solid;
+}
+
+.search_container {
+  display: flex;
+  margin: 10px;
+  width: 150%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.searchBar_container {
+  height: 25%;
+  width: 40%;
+}
+
+.checkbox_container {
+  text-decoration-line: underline;
+}
+
+.searchResults_container {
+  display: flex;
+  overflow: auto;
+  margin: 10px;
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: flex-start;
+}
+
+.searchResults {
+  text-decoration-line: underline;
+}
+
+/* The below is for the home nav bar at the top */
+
+/* Add a black background color to the top navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #e9e9e9;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  display: block;
+  color: black;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.topnav a.active {
+  background-color: #2196f3;
+  color: white;
+}
+
+/* Style the search box inside the navigation bar */
+.topnav input[type="text"] {
+  float: right;
+  padding: 6px;
+  border: none;
+  margin-top: 8px;
+  margin-right: 16px;
+  font-size: 17px;
+}
+
+/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+@media screen and (max-width: 600px) {
+  .topnav a,
+  .topnav input[type="text"] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin: 0;
+    padding: 14px;
+  }
+  .topnav input[type="text"] {
+    border: 1px solid #ccc;
+  }
 }
