--- a/src/App.css
+++ b/src/App.css
@@ -196,7 +196,7 @@ a {
 
 .calendarPop {
   color: grey !important;
-  background-color: blue !important;
+  background-color: rgb(79, 79, 139) !important;
 }
 
 .home_info_left_container {
@@ -361,8 +361,9 @@ a {
   flex-direction: column;
   /* border: solid 4px black; */
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-evenly;
   height: 90%;
+  width: 50%;
   margin: 5px;
   padding: 5px;
 }
@@ -468,4 +469,20 @@ width: 100%;
 
 .calendar {
   height: 100%;
+}
+
+.eventModalContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 350px;
+  overflow: auto;
+}
+
+.eventModal_innerContainer {
+display: flex;
+justify-content: space-around;
+border-bottom: 4px solid rgb(18, 17, 19);
+height: 50px;
+width: auto;
 }
