--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@
   padding: 20px;
   margin-bottom: 20vh;
   width: 400px;
-  box-shadow: 10px 15px 5px grey;
+  box-shadow: 7px 7px 13px rgba(128, 128, 128, 0.301);
   border: 4px solid grey;
   border-radius: 15px;
   background: rgba(255, 255, 255, 0.8);
@@ -121,7 +121,7 @@ a {
   width: 30%;
   margin-left: 10px;
   padding: 16px;
-  box-shadow: 10px 15px 5px rgb(0, 0, 0);
+  box-shadow: 7px 7px 13px rgb(0, 0, 0);
   border: 4px solid grey;
   border-radius: 15px;
 }
@@ -145,7 +145,7 @@ a {
   margin: 10px;
   text-align: left;
   padding: 10px;
-  box-shadow: 10px 15px 5px rgb(0, 0, 0);
+  box-shadow: 7px 7px 13px rgb(0, 0, 0);
   border: 4px solid grey;
   border-radius: 15px;
 }
@@ -257,7 +257,7 @@ a {
   overflow: auto;
   overflow-x: auto;
   background-color: #717275;
-  box-shadow: 10px 15px 5px rgb(0, 0, 0);
+  box-shadow: 7px 7px 13px rgb(0, 0, 0);
   border: 4px solid grey;
   border-radius: 15px;
 }
@@ -277,7 +277,7 @@ a {
   background-color: #717275;
   height: 250px;
   width: 90%;
-  box-shadow: 10px 15px 5px rgb(0, 0, 0);
+  box-shadow: 7px 7px 13px rgb(0, 0, 0);
   border: 4px solid grey;
   border-radius: 15px;
 }
@@ -289,7 +289,7 @@ a {
   height: 50%;
   width: 90%;
   background-color: #717275;
-  box-shadow: 10px 15px 5px rgb(0, 0, 0);
+  box-shadow: 7px 7px 13px rgb(0, 0, 0);
   border: 4px solid grey;
   border-radius: 15px;
 }
@@ -310,13 +310,13 @@ a {
 }
 
 .checkbox_container {
-  text-decoration-line: underline;
 }
 
 .searchResults_container {
   display: flex;
   overflow: auto;
   margin: 10px;
+  padding: 10px;
   width: 100%;
   height: 80%;
   flex-direction: column;
