--- a/src/App.css
+++ b/src/App.css
@@ -235,9 +235,19 @@ a {
 .home_info_right_containerMain {
   display: flex;
   flex-direction: row;
-  background-color: #C7152E;
+  /* background-color: #C7152E;
+  background-image: linear-gradient(315deg, black 25%, #C7152E 70%); */
   height: 100%;
   width: 80vw;
+  background: linear-gradient(199deg, #c7152e, #630c18, #40070f, #e61934);
+  background-size: 800% 800%;
+  animation: home_info_right_containerMain 7s ease infinite;
+}
+
+@keyframes home_info_right_containerMain { 
+  0%{background-position:56% 0%}
+  50%{background-position:45% 100%}
+  100%{background-position:56% 0%}
 }
 
 .home_info_right_containerRight {
@@ -247,7 +257,7 @@ a {
   justify-content: space-evenly;
   align-items: center;
   height: 100%;
-  width: 70%;
+  width: 45%;
 }
 
 .home_info_right_containerRight_events {
@@ -264,18 +274,21 @@ a {
 
 .home_info_right_containerLeft {
   display: flex;
+  overflow: auto;
   justify-content: space-evenly;
   flex-direction: column;
   align-items: center;
   height: 100%;
-  width: 75vw;
+  width: 60%;
 }
 
 .home_info_right_containerLeft_sub1 {
   display: flex;
   flex-direction: row;
   background-color: #717275;
-  height: 250px;
+  overflow: auto;
+
+  height: 30%;
   width: 90%;
   box-shadow: 7px 7px 13px rgb(0, 0, 0);
   border: 4px solid grey;
@@ -464,7 +477,7 @@ a {
 }
 
 .messageCentral_body {
-  display: flex;
+  word-wrap: break-word;
   width: auto;
   height: auto;
   font-size: 18px;
@@ -519,5 +532,4 @@ a {
   height: auto;
   width: auto;
 }
-
 
